# restbed

./: CMakeLists.txt  LICENSE
source/corvusoft/restbed/: context_placeholder.hpp  context_placeholder_base.hpp  context_value.hpp  http.cpp  http.hpp  logger.hpp  request.hpp  resource.hpp  response.hpp  rule.hpp  service.cpp  service.hpp  session.cpp  session.hpp  session_manager.hpp  settings.hpp  ssl_settings.hpp  string.hpp  uri.hpp  web_socket.cpp  web_socket.hpp  web_socket_message.hpp
source/corvusoft/restbed/detail/: http_impl.cpp  http_impl.hpp  ipc_socket_impl.cpp  ipc_socket_impl.hpp  request_impl.hpp  service_impl.cpp  service_impl.hpp  session_impl.cpp  session_impl.hpp  socket_impl.cpp  socket_impl.hpp  web_socket_impl.cpp  web_socket_impl.hpp  web_socket_manager_impl.cpp
test/feature/: CMakeLists.txt
test/feature/source/connection_timeout/: client.cpp  server.cpp
test/feature/source/custom_authentication/: resource.cpp  service.cpp
test/feature/source/custom_error_handling/: resource.cpp  service.cpp
test/feature/source/custom_http_methods/: http_connect.cpp  (+9 more)
test/integration/: CMakeLists.txt
test/integration/source/: http_suite.cpp  request_suite.cpp  resource_suite.cpp  response_suite.cpp  service_suite.cpp  session_suite.cpp  settings_suite.cpp  ssl_settings_suite.cpp  string_suite.cpp  web_socket_message_suite.cpp
test/regression/: CMakeLists.txt
test/regression/source/: allow_hyphen_in_path_parameter_name.cpp  allow_underscore_in_path_parameter_name.cpp  client_fails_to_calculate_body_length.cpp  content_length_present_on_empty_response_body.cpp  content_type_present_on_empty_response_body.cpp  error_handler_not_overwritten.cpp  exception_thrown_with_space_in_resource_path.cpp  fails_to_parse_header_values_containing_colons.cpp  fails_to_parse_identical_query_parameters.cpp  ipv4_session_origin_destination_malformed.cpp  large_request_bodies_being_trimmed.cpp  locale_creates_incorrect_version_format.cpp  missing_regex_support_on_gcc_4.8.cpp  path_parameters_are_not_visible_within_rules.cpp  path_parameters_off_by_one.cpp  path_parameters_persist_across_keep_alive_requests.cpp  request_get_parameters_fails_to_return_data.cpp  request_returning_body_from_prior_requests.cpp  request_uris_are_not_being_decoded.cpp  resource_destroyed_with_bound_functors.cpp  resource_error_handler_overflow.cpp  resource_responding_on_invalid_path.cpp  resources_are_not_overwritten.cpp  segmentation_fault_on_mismatched_path.cpp  service_error_handler_overflow.cpp  ssl_settings_to_handle_windows_paths.cpp  string_replace_fails_to_replace_embedded_targets.cpp  uncaught_exception_when_peer_closes_connection.cpp  uri_fails_to_handle_file_scheme_relative_paths.cpp  uri_get_parameter_fails_to_handle_empty_values.cpp  yield_callback_leads_to_service_crash.cpp
test/unit/: CMakeLists.txt
test/unit/source/: request_suite.cpp  resource_suite.cpp  response_suite.cpp  service_suite.cpp  session_suite.cpp  settings_suite.cpp  ssl_settings_suite.cpp  string_suite.cpp  uri_suite.cpp  web_socket_message_suite.cpp
(+50 files in other folders)
